compiler-java/test/src/org/eclipse/ceylon/compiler/java/test/interop/Bug2027.ceylon
import java.lang {
    suppressWarnings__GETTER  // error: imported declaration not found: 'generated__GETTER'
}
void bug2027(){}